# MacCleaner

./: .gitignore  AGENTS.md  IDEAS.md  README.md  build.sh  prompt.md
build-assets/: Info.plist
mac-cleaner-core/: Cargo.toml
mac-cleaner-core/src/: main.rs  model.rs  scanner.rs  streaming.rs
mac-cleaner-core/src/commands/: browser_caches.rs  delete_paths.rs  docker.rs  junk.rs  large_files.rs  login_items.rs  mod.rs  node_modules.rs  old_installers.rs  sweep.rs  uninstall.rs  xcode.rs
swift-ui/: main.swift
