[package]
name = "mac-cleaner-core"
version = "0.1.0"
edition = "2021"
description = "Rust CLI core for the MacCleaner macOS utility"
license = "MIT"

[[bin]]
name = "mac-cleaner-core"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plist = "1.6"
dirs = "5.0"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
